--- a/demo/curso-rocketseat/Fetch-Discovery-API/index.html
+++ b/demo/curso-rocketseat/Fetch-Discovery-API/index.html
@@ -5,8 +5,12 @@
         <script src="./main.js"></script>
     </head>
         <body>
-            <div id="renderApiResult">oi</div>
+            <div id="alert">OK</div>
             <hr>
+            <div id="renderApiResult">oi</div>
+
+            <hr>
+            
             <p id="userName"></p>
             <p id="userCity"></p>
             <img src="" id="userAvatar">
