--- a/demo/curso-rocketseat/Fetch-Discovery-API/index.html
+++ b/demo/curso-rocketseat/Fetch-Discovery-API/index.html
@@ -5,7 +5,7 @@
         <script src="./main.js"></script>
     </head>
         <body>
-            <div id="alert">OK</div>
+            <div id="alertApi">OK</div>
             <hr>
             <div id="renderApiResult">oi</div>
 
